<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RunningTaskActivity!</string>
    <string name="app_name">Emmagee</string>
    <string name="app_name1">Main</string>
    <string name="app_name2">系统信息</string>
    <string name="app_name3">测试</string>
    <string name="app_name4">设置</string>
    <string name="system">检测系统信息</string>
    <string name="start">启动程序</string>
    <string name="cpu">开始测试</string>
    <string name="bg">开始测试</string>
    <string name="testmemory">测试内存</string>
    <string name="memoryinfo">memoryInfo</string>
    <string name="collect">采集频率：</string>
    <string name="alertMsg">报警阀值：</string>
    <string name="cpuAlert">CPU</string>
    <string name="memAlert">，MEM</string>
    <string name="percent">%</string>
    <string name="mb">MB</string>
    <string name="dumpheapMsg1">内存</string>
    <string name="dumpheapMsg2">时,自动dump,增长率</string>
    <string name="receiver">收件人(多人以空格分割)：</string>
    <string name="sender">发件人：</string>
    <string name="password">密  码：</string>
    <string name="smtp">smtp服务器：</string>
    <string name="seconds"> 秒</string>
    <string name="window"> 是否显示浮窗</string>
    <string name="ok">保存</string>
    <string name="openwifi">开启wifi</string>
    <string name="closewifi">关闭wifi</string>
    <string name="stopTest">停止测试</string>

</resources>